--- a/AWS_cfn_Training/main-cfn.yml
+++ b/AWS_cfn_Training/main-cfn.yml
@@ -1,6 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Resources:
-
   # VPC
   CfnSampleVPC:
     Type: AWS::EC2::VPC
@@ -12,20 +11,34 @@ Resources:
       Tags:
         - Key: "Name"
           Value: "CfnSampleVPC"
- 
+
   # Subnet
   CfnSamplePublicSubnet:
     Type: AWS::EC2::Subnet
     Properties:
       AvailabilityZone: !Select
         - 0
-        - !GetAZs 
+        - !GetAZs
           Ref: AWS::Region
-      CidrBlock: !Select [ 0, !Cidr [ !GetAtt CfnSampleVPC.CidrBlock, 2, 8 ]]
+      CidrBlock: !Select [0, !Cidr [!GetAtt CfnSampleVPC.CidrBlock, 2, 8]]
       MapPublicIpOnLaunch: true
       Tags:
         - Key: "Name"
-          Value: "CfnSamplePublicSubnet"
+          Value: "CfnSamplePublicSubnet1"
+      VpcId: !Ref CfnSampleVPC
+
+  CfnSamplePublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      AvailabilityZone: !Select
+        - 0
+        - !GetAZs
+          Ref: AWS::Region
+      CidrBlock: !Select [1, !Cidr [!GetAtt CfnSampleVPC.CidrBlock, 2, 8]]
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: "Name"
+          Value: "CfnSamplePublicSubnet2"
       VpcId: !Ref CfnSampleVPC
 
   # RouteTable
